tests/expected_output/break_statement_not_in_loop/000000-clang-13.0-x86_64-pc-linux-gnu.txt
tests/extracted_compile_time_errors/break_statement_not_in_loop.c:2:5: error: 'break' statement not in loop or switch statement
    break;
    ^
dcc explanation: break statements can only be used inside a while loop, for loop or switch.
Check the braces {} are correct on nearby statements.
